# ethminer

./: .gitignore  .gitmodules  CMakeLists.txt  GPATH  GRTAGS  GSYMS  GTAGS  httpclient.cpp
ethminer/: CMakeLists.txt  Config.h  MinerAux.h  config.ini  httpclient.cpp  main.cpp
libapicore/: Api.cpp  Api.h  CMakeLists.txt
libethcore/: CMakeLists.txt  IJsonSerializer.cpp  IJsonSerializer.hpp  Miner.h
libpoolprotocols/stratum/: EthStratumClient.cpp
